--- a/flo/src/app/table/desktop/desktop.component.html
+++ b/flo/src/app/table/desktop/desktop.component.html
@@ -1,9 +1,10 @@
 <ag-grid-angular
-  style="width: 100%; height: 500px"
+  style="width: 100%; height: 1000px"
   class="ag-theme-material _custom"
   [context]="{componentParent: this}"
   [rowData]="rowData"
   [columnDefs]="columnDefs"
+  [modules]="modules"
   [rowHeight]="rowHeight"
   [suppressCellSelection]="true"
   [suppressRowClickSelection]="true"
