--- a/flo/src/app/table/shared/components/detail-tablet/detail-tablet.component.html
+++ b/flo/src/app/table/shared/components/detail-tablet/detail-tablet.component.html
@@ -1,27 +1,41 @@
 <table class="detail-tablet">
   <thead class="detail-tablet__row">
-    <th>status</th>
-    <th>s-date/ e-date</th>
-    <th>date of service</th>
-    <th>daily rate</th>
-    <th>gross payment</th>
-    <th>liability</th>
-    <th>net payment</th>
-    <th class="_align-center">total</th>
+    <th>Status</th>
+    <th>Service Date</th>
+    <th>DOS</th>
+    <th>Daily Rate</th>
+    <th>Gross Payment</th>
+    <th>Liability</th>
+    <th>Net Payment</th>
+    <th class="_align-center">Total</th>
   </thead>
   <tbody>
-    <ng-container *ngFor="let row of rows;  let i = index; let isFirst = first">
-      <tr class="detail-tablet__row" *ngIf="!row.warningType">
+    <ng-container *ngFor="let row of rows; let i = index; let isFirst = first">
+      <tr class="detail-tablet__row" *ngIf="!(tableData.data.isPrivatePay || tableData.data.isMedPending)">
         <td class="detail-tablet__cell">{{row.status}}</td>
-        <td class="detail-tablet__cell">{{row.startDate}} - {{row.endDate}}</td>
-        <td class="detail-tablet__cell">{{row.dateOfService}}</td>
-        <td class="detail-tablet__cell">{{row.dailyRate.from}} - {{row.dailyRate.to}}</td>
-        <td class="detail-tablet__cell">{{row.grossPayment}}</td>
-        <td class="detail-tablet__cell">{{row.liability.from}} - {{row.liability.to}}</td>
-        <td class="detail-tablet__cell">{{row.netPayment}}</td>
-        <td *ngIf="isFirst" class="detail-tablet__cell _total" [rowSpan]="rows.length">{{tableData.data.total}}</td>
+        <td class="detail-tablet__cell">
+          <div [ngClass]="{'crossed': row.isDeleted, 'bolder': row.isAdded}">
+            {{row.startDate | date:'MM/dd/yy'}}-{{row.endDate | date:'MM/dd/yy'}}
+          </div>
+        </td>
+        <td class="detail-tablet__cell">{{getDateDiff(row)}}</td>
+        <td class="detail-tablet__cell">
+          <div>
+            <span *ngIf="row.snfDailyRate != null && row.snfDailyRate != row.dailyRate" class="bolder p-r-10">${{row.snfDailyRate}}</span>
+            <span *ngIf="row.dailyRate != null" [ngClass]="{'crossed': row.snfDailyRate != null && row.snfDailyRate != row.dailyRate}">${{row.dailyRate}}</span>
+          </div>
+        </td>
+        <td class="detail-tablet__cell">${{getDateDiff(row)*(row.snfDailyRate||row.dailyRate||0) | number:'1.2-2'}}</td>
+        <td class="detail-tablet__cell">
+          <div>
+            <span *ngIf="row.snfLiability != null &&row.snfLiability!=row.liability " class="bolder p-r-10">${{row.snfLiability}}</span>
+            <span *ngIf="row.liability != null" [ngClass]="{'crossed': row.snfLiability != null && row.snfLiability!=row.liability }">${{row.liability}}</span>
+          </div>
+        </td>
+        <td class="detail-tablet__cell">${{getDateDiff(row)*(row.snfDailyRate||row.dailyRate||0) - row.snfLiability||row.liability||0 | number:'1.2-2'}}</td>
+        <td *ngIf="isFirst" class="detail-tablet__cell _total" [rowSpan]="rows.length">${{getTotal() | number:'1.2-2'}}</td>
       </tr>
-      <tr class="detail-tablet__message" *ngIf="row.warningType">
+      <tr class="detail-tablet__message" *ngIf="tableData.data.isPrivatePay || tableData.data.isMedPending">
         <td class="detail-tablet__cell"
             colspan="7">
           <div style="padding: 0">
@@ -38,12 +52,26 @@
               </tr>
               <tr class="detail-tablet__row">
                 <td class="detail-tablet__cell"><span style="padding-left: 7px">{{row.status}}</span></td>
-                <td class="detail-tablet__cell">{{row.startDate}} - {{row.endDate}}</td>
-                <td class="detail-tablet__cell">{{row.dateOfService}}</td>
-                <td class="detail-tablet__cell">{{row.dailyRate.from}} - {{row.dailyRate.to}}</td>
-                <td class="detail-tablet__cell">{{row.grossPayment}}</td>
-                <td class="detail-tablet__cell">{{row.liability.from}} - {{row.liability.to}}</td>
-                <td class="detail-tablet__cell">{{row.netPayment}}</td>
+                <td class="detail-tablet__cell">
+                  <div [ngClass]="{'crossed': row.isDeleted, 'bolder': row.isAdded}">
+                    {{row.startDate | date:'MM/dd/yy'}}-{{row.endDate | date:'MM/dd/yy'}}
+                  </div>
+                </td>
+                <td class="detail-tablet__cell">{{getDateDiff(row)}}</td>
+                <td class="detail-tablet__cell">
+                  <div>
+                    <span *ngIf="row.snfDailyRate != null && row.snfDailyRate != row.dailyRate" class="bolder p-r-10">${{row.snfDailyRate}}</span>
+                    <span *ngIf="row.dailyRate != null" [ngClass]="{'crossed': row.snfDailyRate != null && row.snfDailyRate != row.dailyRate}">${{row.dailyRate}}</span>
+                  </div>
+                </td>
+                <td class="detail-tablet__cell">${{getDateDiff(row)*(row.snfDailyRate||row.dailyRate||0) | number:'1.2-2'}}</td>
+                <td class="detail-tablet__cell">
+                  <div>
+                    <span *ngIf="row.snfLiability != null &&row.snfLiability!=row.liability " class="bolder p-r-10">${{row.snfLiability}}</span>
+                    <span *ngIf="row.liability != null" [ngClass]="{'crossed': row.snfLiability != null && row.snfLiability!=row.liability }">${{row.liability}}</span>
+                  </div>
+                </td>
+                <td class="detail-tablet__cell">${{getDateDiff(row)*(row.snfDailyRate||row.dailyRate||0) - row.snfLiability||row.liability||0 | number:'1.2-2'}}</td>
               </tr>
             </table>
           </div>
