removed scroll in ag-grid added field "hospice"

--- a/flo/src/app/app.component.html
+++ b/flo/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div style="height: 100%">
-  <responsive-table></responsive-table>
+<div>
+  <responsive-table [rowData]="rowData"></responsive-table>
 </div>
