--- a/flo/src/app/table/view/responsive-table/responsive-table.component.html
+++ b/flo/src/app/table/view/responsive-table/responsive-table.component.html
@@ -5,8 +5,7 @@
             (uploadInfo)="uploadInfo($event)"
             (edit)="edit($event)"
             (rowSelection)="onRowSelection($event)"
-            (selectionChanged)="onSelectionChanged($event)"
-  ></desktop>
+            (selectionChanged)="onSelectionChanged($event)"></desktop>
   <mobile *ngIf="showMobile"
           [rowData]="rowData"
           (openChat)="openChat($event)"
