--- a/flo/src/app/table/mobile/mobile.component.html
+++ b/flo/src/app/table/mobile/mobile.component.html
@@ -10,24 +10,20 @@
     <mat-card class="patient-card__header"
               fxLayout="column">
       <mat-card-title fxLayout="row">
-        <div fxLayout="row"
-             fxLayoutAlign="center center"
-             fxLayoutGap="10px">
-          <mat-checkbox color="primary"
-                        (change)="selectedChange.emit($event)"></mat-checkbox>
-          <div>
-            <span class="label" [ngClass]="tableData?.data?.status?.status == 4 ? 'label-success': 'label-info'">{{getStatusText(item?.status?.status||1)}}</span>
-          </div>
-          <button class="actions-btn"
-                  color="primary"
-                  (click)="openChat.emit(item)"
-                  mat-icon-button
-                  type="button"
-                  [title]="'Chat'">
-            <mat-icon class="actions-btn-icon">chat</mat-icon>
-          </button>
+        <div fxLayout="row" fxLayoutGap="10px">
+          <div fxLayout="row"
+               fxLayoutAlign="center center"
+               fxLayoutGap="10px">
+            <mat-checkbox color="primary"
+                          (change)="checkStatusCheckBox($event)"></mat-checkbox></div>
+          <span class="label"
+                  [ngClass]="tableData?.data?.status?.status == 4 ? 'label-success': 'label-info'">{{getStatusText(item?.status?.status || 1)}}</span>
         </div>
-        <div class="btn-action-wrapper" fxFlex="100%" fxLayoutAlign="end end" fxLayout="row" fxLayoutGap="10px">
+        <div class="btn-action-wrapper"
+             fxFlex="100%"
+             fxLayoutAlign="end center"
+             fxLayout="row"
+             fxLayoutGap="10px">
           <button *ngIf="true" class="actions-btn"
                   mat-icon-button
                   type="button"
@@ -38,14 +34,21 @@
             <mat-icon *ngIf="!item.show" class="actions-btn-icon">expand_more</mat-icon>
           </button>
           <button *ngIf="true" class="actions-btn"
+                  color="primary"
+                  (click)="openChat.emit(item)"
+                  mat-icon-button
+                  type="button"
+                  [title]="'Chat'">
+            <mat-icon class="actions-btn-icon">chat</mat-icon>
+          </button>
+          <button *ngIf="true" class="actions-btn"
                   mat-icon-button
                   color="primary"
                   type="button"
                   (click)="edit.emit(item)"
                   title="Edit">
             <mat-icon class="actions-btn-icon">mode_edit</mat-icon>
-          </button>
-        </div>
+          </button></div>
       </mat-card-title>
       <mat-card-content>
         <dl fxFlex="100%">
