--- a/flo/src/app/table/shared/components/actions-btn/actions-btn.component.html
+++ b/flo/src/app/table/shared/components/actions-btn/actions-btn.component.html
@@ -2,6 +2,6 @@
         mat-icon-button
         type="button"
         color="primary"
-        (click)="edit($event)"
+        (click)="edit(tableData.data)"
         title="Edit">
   <mat-icon class="actions-btn-icon">mode_edit</mat-icon></button>
