--- a/flo/src/app/table/view/responsive-table/responsive-table.component.html
+++ b/flo/src/app/table/view/responsive-table/responsive-table.component.html
@@ -4,8 +4,8 @@
             (openChat)="openChat.emit($event)"
             (edit)="edit.emit($event)"
             (uploadInfo)="uploadInfo.emit($event)"
-            (patientChecked)="patientChecked.emit($event)"
-            (checkBoxValueChange)="checkBoxPatientChange.emit($event)"></desktop>
+            (checkBoxValueChange)="checkBoxPatientChange.emit($event)"
+            (patientChecked)="patientChecked.emit($event)"></desktop>
   <mobile *ngIf="showMobile"
           [rowData]="rowData"
           (openChat)="openChat.emit($event)"
