--- a/flo/src/app/table/mobile/mobile.component.css
+++ b/flo/src/app/table/mobile/mobile.component.css
@@ -1,67 +1,3 @@
-/*.wrapper {
-  width: 100%;
-  padding: 5px 5px;
-  overflow: hidden;
-  align-items: center;
-}
-.wrapper ._total {
-    border-top: 1px solid #babbad;
-    font-weight: 600;
-    z-index: 2;
-    overflow: hidden;
-}
-.patient-card {
-  background-color: #f8f5f5;
-  overflow: hidden;
-  z-index: 3;
-  max-width: 750px;
-  width: 100%;
-}
-.patient-card__header {
-    z-index: 55;
-}
-.patient-card__header-status {
-      display: inline;
-      padding: 0 10px;
-      background-color: #415bec;
-      border-radius: 5px;
-      line-height: 22px;
-      max-width: 75px;
-      width: 100%;
-}
-.patient-card__header-status-text {
-   font-size: 14px;
-   color: #fff;
-   white-space: nowrap;
- }
-.patient-card__header-status .btn-action-wrapper {
-  justify-content: end
-}
-.actions-btn {
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  line-height: 17px;
-  background-color: rgba(230, 230, 232, 0.8);
-}
-.actions-btn-icon {
-   font-size: 17px
-}
-
-.patient-card__body-details-title {
-  font-size: 16px;
-}
-.patient-card__body-details-title .message-button {
-  line-height: 20px;
-  width: 110px;
-  display: inline-block;
-  margin-left: 10px
-}
-
-.patient-card__body-details._warning-message {
-  background-color: #ffb22b
-}*/
-
 .patients-container {
   padding: 5px 5px;
   overflow: hidden;
@@ -75,6 +11,9 @@
   width: 100%;
 }
 
+.patient-card__body-details._warning-message  {
+  background-color: #ffb22b;
+}
 dt {
   float: left;
   padding-right: 5px;
@@ -86,11 +25,38 @@ dd {
   width: 100%;
   position: relative;
   top: -1px;
-  margin-bottom: 10px;
   text-align: end;
   margin-left: 0;
 }
+dd:not(:last-child) {
+  margin-bottom: 10px;
+}
 
+mat-checkbox.mobile-card-checkbox .mat-ripple-element {
+  background-color: transparent !important;
+}
+.mobile-card-toggle-btn {
+  pointer-events: auto;
+}
+.mobile-card .mat-expansion-panel {
+  background-color:#f8f8f8;
+}
 
+.mobile-card .mat-expansion-panel-header {
+  padding: 15px 0 0 10px;
+}
 
+.mobile-card .mat-expansion-panel-header .mat-content {
+  flex-direction: column;
+}
 
+.mobile-card .patient-card__body:not(:last-child) {
+  margin-bottom: 10px;
+}
+.mobile-card__warning-message {
+  font-size: 16px;
+}
+.mobile-card__warning-message-btn.mat-raised-button {
+  line-height: 1.8;
+  font-size: 12px;
+}
