--- a/flo/src/app/table/mobile/mobile.component.html
+++ b/flo/src/app/table/mobile/mobile.component.html
@@ -1,22 +1,25 @@
-<div class="patients-container" fxLayout="column" fxLayoutGap="15px" fxLayoutAlign="center center">
-  <div class="patient-card" fxLayout="column" fxLayoutGap="5px" *ngFor="let item of rowData">
-    <mat-card class="patient-card__header" fxLayout="column">
-      <mat-card-title>
-        <div fxLayout="row wrap" fxLayoutAlign="center center">
-          <div fxFlex="60" fxLayoutGap="5px">
-            <mat-checkbox color="primary" (change)="checkStatusCheckBox($event)"></mat-checkbox>
+<mat-accordion class="mobile-card">
+  <mat-expansion-panel *ngFor="let item of rowData" #panel1 [hideToggle]="true">
+    <mat-expansion-panel-header  fxLayout="row" [collapsedHeight]="'150px'"
+                                [expandedHeight]="'100%'">
+      <mat-panel-title>
+        <div fxLayoutAlign="space-between center" fxFlex="100">
+          <div>
+            <mat-checkbox class="mobile-card-checkbox" color="primary"  style="margin-right: 10px; pointer-events: auto" (click)="$event.stopPropagation();" (change)="checkStatusCheckBox($event,item)"></mat-checkbox>
             <span class="label" [ngClass]="tableData?.data?.status?.status == 4 ? 'label-success': 'label-info'">{{getStatusText(item?.status?.status || 1)}}</span>
           </div>
-          <div fxFlex="40" fxLayoutAlign="end center">
+          <div style="margin-right: -10px; display: flex">
             <button mat-icon-button
                     type="button"
                     color="primary"
-                    (click)="item.show = !item.show">
-              <mat-icon *ngIf="item.show" class="actions-btn-icon">expand_less</mat-icon>
-              <mat-icon *ngIf="!item.show" class="actions-btn-icon">expand_more</mat-icon>
-            </button>
+                    class="mobile-card-toggle-btn"
+                    (click)="$event.stopPropagation(); panel1.toggle()">
+                            <mat-icon *ngIf="item.show" class="actions-btn-icon">expand_less</mat-icon>
+                            <mat-icon *ngIf="!item.show" class="actions-btn-icon">expand_more</mat-icon>
+                          </button>
             <button color="primary"
-                    (click)="openChat.emit(item)"
+                    style="pointer-events: auto"
+                    (click)="$event.stopPropagation(); openChat.emit(item)"
                     mat-icon-button
                     type="button"
                     [title]="'Notes'">
@@ -24,54 +27,48 @@
             </button>
             <button mat-icon-button
                     color="primary"
+                    style="pointer-events: auto"
                     type="button"
-                    (click)="edit.emit(item)"
+                    (click)="$event.stopPropagation(); edit.emit(item)"
                     title="Edit">
               <mat-icon class="actions-btn-icon">mode_edit</mat-icon>
             </button>
           </div>
         </div>
-
-      </mat-card-title>
-      <mat-card-content>
-        <dl fxFlex="100%">
+      </mat-panel-title>
+      <mat-panel-description>
+        <dl fxFlex="100%" fxLayoutGap="7px">
           <dt>Patient</dt>
           <dd>{{item.lastName}} {{item.firstName}}</dd>
           <dt>Hospice</dt>
-          <dd></dd>
+          <dd>{{item.snfHistory[0].snfName}}</dd>
           <dt>Total</dt>
           <dd class="_total">${{getTotal(item) | number:'1.2-2'}}</dd>
         </dl>
-      </mat-card-content>
-    </mat-card>
-    <ng-container *ngIf="item.show">
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <ng-container>
       <div class="patient-card__body"
            fxLayout="column"
-           fxLayoutGap="10px"
-           [@slideToggle]
            *ngFor="let info of item.serviceInfos">
-        <mat-card class="patient-card__body-details _warning-message"
-                  [class._warning-message]="item.isPrivatePay || item.isMedPendingwarningType"
+        <mat-card class="patient-card__body-details" fxLayoutGap="10px"
+                  [class._warning-message]="item.isPrivatePay || item.isMedPending"
                   fxLayout="column">
           <mat-card-title class="patient-card__body-details-title"
                           fxLayout="column"
-                          *ngIf="item.isPrivatePay || item.isMedPendingwarningType">
-            <span>
+                          *ngIf="item.isPrivatePay || item.isMedPending">
+            <span class="mobile-card__warning-message">
               Med pending patient is not eligibl for payment. Please provide proof of caverage
-              <button mat-raised-button color="warn" (click)="uploadInfo.emit(serviceInfo)">Upload</button>
+              <button class=mobile-card__warning-message-btn mat-raised-button color="warn" (click)="uploadInfo.emit(item)">Upload</button>
             </span>
           </mat-card-title>
           <dl>
-            <dt>Status</dt>
-            <dd></dd>
-
             <dt>Service Dates</dt>
             <dd>
               <div [ngClass]="{'crossed': info.isDeleted, 'bolder': info.isAdded}">
                 {{info.startDate | date:'MM/dd/yy'}}-{{info.endDate | date:'MM/dd/yy'}}
               </div>
             </dd>
-
             <dt>DOS</dt>
             <dd>{{getDateDiff(info)}}</dd>
 
@@ -82,7 +79,6 @@
                 <span *ngIf="info.dailyRate != null" [ngClass]="{'crossed': info.snfDailyRate != null && info.snfDailyRate != info.dailyRate}">${{info.dailyRate}}</span>
               </div>
             </dd>
-
             <dt>Gross Payment</dt>
             <dd>${{getDateDiff(info)*(info.snfDailyRate||info.dailyRate||0) | number:'1.2-2'}}</dd>
 
@@ -93,12 +89,11 @@
                 <span *ngIf="info.liability != null" [ngClass]="{'crossed': info.snfLiability != null && info.snfLiability!=info.liability }">${{info.liability}}</span>
               </div>
             </dd>
-
             <dt>Net Payment</dt>
             <dd>${{getDateDiff(info)*(info.snfDailyRate||info.dailyRate||0) - info.snfLiability||info.liability||0 | number:'1.2-2'}}</dd>
           </dl>
         </mat-card>
       </div>
     </ng-container>
-  </div>
-</div>
+  </mat-expansion-panel>
+</mat-accordion>
