--- a/flo/src/app/table/shared/components/chat-actions/chat-actions.component.html
+++ b/flo/src/app/table/shared/components/chat-actions/chat-actions.component.html
@@ -1,7 +1,7 @@
 <button class="chat-actions"
-        (click)="openLeadChat()"
         mat-icon-button
         color="primary"
         type="button"
-        [title]="'Chat'">
+        [title]="'Chat'"
+        style="margin: auto 0">
   <mat-icon class="chat-actions__icon">chat</mat-icon></button>
