--- a/flo/src/app/table/shared/components/status/status.component.html
+++ b/flo/src/app/table/shared/components/status/status.component.html
@@ -1,3 +1,3 @@
-<div class="status">
-  <span [ngClass]="tableData?.data?.status?.status == 4 ? 'label-success': 'label-info'">{{getStatusText(tableData?.data?.status?.status||1)}}</span>
+<div>
+  <span class="label" [ngClass]="tableData?.data?.status?.status == 4 ? 'label-success': 'label-info'">{{getStatusText(tableData?.data?.status?.status||1)}}</span>
 </div>
