--- a/flo/src/app/table/shared/components/actions-btn/actions-btn.component.html
+++ b/flo/src/app/table/shared/components/actions-btn/actions-btn.component.html
@@ -1,7 +1,8 @@
-<button *ngIf="true" class="actions-btn"
+<button class="actions-btn"
         mat-icon-button
         type="button"
         color="primary"
         (click)="edit(tableData.data)"
         title="Edit">
-  <mat-icon class="actions-btn-icon">mode_edit</mat-icon></button>
+  <mat-icon class="actions-btn-icon">mode_edit</mat-icon>
+</button>
